--- a/hr-eureka-server/pom.xml
+++ b/hr-eureka-server/pom.xml
@@ -24,6 +24,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
