--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.cloud.config.server.git.default-label=main
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/wedersonals/human-resources-configs
+spring.cloud.config.server.git.username=${GITHUB_USER}
+spring.cloud.config.server.git.password=${GITHUB_PASS}
+
